# gps-time-converter

./: .gitignore  GITHUB_RELEASE_GUIDE.md  GPSUTC.BSW  LICENSE  Prompt.md  README.md  gps-time.spec  pyproject.toml  verify_tow.py
.sisyphus/: boulder.json
.sisyphus/plans/: gps-time-converter.md
gps_time/: cli.py  converter.py  leap_second_table.py
tests/: conftest.py  test_bjt.py  test_cli.py  test_doy.py  test_gps.py  test_leap_second.py  test_mjd.py  test_placeholder.py  test_reverse_conversions.py  test_tod.py
